<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/contentPaddingHorizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgAvatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@tools:sample/backgrounds/scenic[1]"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/imgAvatar"
            app:layout_constraintBottom_toBottomOf="@+id/imgAvatar"
            app:layout_constraintStart_toEndOf="@+id/imgAvatar"
            android:layout_marginStart="@dimen/contentPaddingHorizontalHalf"
            android:text="@string/login"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblLoginValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/lblLogin"
            app:layout_constraintBottom_toBottomOf="@id/lblLogin"
            app:layout_constraintStart_toEndOf="@id/lblLogin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/contentPaddingHorizontalHalf"
            tools:text="Some user"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblUrl"
            style="@style/label"
            app:layout_constraintTop_toBottomOf="@+id/imgAvatar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/contentPaddingVerticalHalf"
            android:text="@string/url"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblUrlValue"
            style="@style/labelValue"
            app:layout_constraintTop_toTopOf="@id/lblUrl"
            app:layout_constraintBottom_toBottomOf="@id/lblUrl"
            app:layout_constraintStart_toEndOf="@id/lblUrl"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/contentPaddingHorizontalHalf"
            android:background="@drawable/bgd_item"
            tools:text="Some user"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblHtmlUrl"
            style="@style/label"
            app:layout_constraintTop_toBottomOf="@+id/lblUrl"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/contentPaddingVerticalHalf"
            android:text="@string/htmlUrl"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblHtmlUrlValue"
            style="@style/labelValue"
            app:layout_constraintTop_toTopOf="@id/lblHtmlUrl"
            app:layout_constraintBottom_toBottomOf="@id/lblHtmlUrl"
            app:layout_constraintStart_toEndOf="@id/lblHtmlUrl"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/contentPaddingHorizontalHalf"
            android:background="@drawable/bgd_item"
            tools:text="Some user"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblFollowersUrl"
            style="@style/label"
            app:layout_constraintTop_toBottomOf="@+id/lblHtmlUrl"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/contentPaddingVerticalHalf"
            android:text="@string/followersUrl"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblFollowersUrlValue"
            style="@style/labelValue"
            app:layout_constraintTop_toTopOf="@id/lblFollowersUrl"
            app:layout_constraintBottom_toBottomOf="@id/lblFollowersUrl"
            app:layout_constraintStart_toEndOf="@id/lblFollowersUrl"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/contentPaddingHorizontalHalf"
            android:background="@drawable/bgd_item"
            tools:text="Some user"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblOrganizationsUrl"
            style="@style/label"
            app:layout_constraintTop_toBottomOf="@+id/lblFollowersUrl"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/contentPaddingVerticalHalf"
            android:text="@string/organizationsUrl"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblOrganizationsUrlValue"
            style="@style/labelValue"
            app:layout_constraintTop_toTopOf="@id/lblOrganizationsUrl"
            app:layout_constraintBottom_toBottomOf="@id/lblOrganizationsUrl"
            app:layout_constraintStart_toEndOf="@id/lblOrganizationsUrl"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/contentPaddingHorizontalHalf"
            android:background="@drawable/bgd_item"
            tools:text="Some user"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblReposUrl"
            style="@style/label"
            app:layout_constraintTop_toBottomOf="@+id/lblOrganizationsUrl"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/contentPaddingVerticalHalf"
            android:text="@string/reposUrl"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblReposUrlValue"
            style="@style/labelValue"
            app:layout_constraintTop_toTopOf="@id/lblReposUrl"
            app:layout_constraintBottom_toBottomOf="@id/lblReposUrl"
            app:layout_constraintStart_toEndOf="@id/lblReposUrl"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/contentPaddingHorizontalHalf"
            android:background="@drawable/bgd_item"
            tools:text="Some user"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblEventsUrl"
            style="@style/label"
            app:layout_constraintTop_toBottomOf="@+id/lblReposUrl"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/contentPaddingVerticalHalf"
            android:text="@string/eventsUrl"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblEventsUrlValue"
            style="@style/labelValue"
            app:layout_constraintTop_toTopOf="@id/lblEventsUrl"
            app:layout_constraintBottom_toBottomOf="@id/lblEventsUrl"
            app:layout_constraintStart_toEndOf="@id/lblEventsUrl"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/contentPaddingHorizontalHalf"
            android:background="@drawable/bgd_item"
            tools:text="Some user"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblReceivedEventsUrl"
            style="@style/label"
            app:layout_constraintTop_toBottomOf="@+id/lblEventsUrl"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/contentPaddingVerticalHalf"
            android:text="@string/receivedEventsUrl"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblReceivedEventsUrlValue"
            style="@style/labelValue"
            app:layout_constraintTop_toTopOf="@id/lblReceivedEventsUrl"
            app:layout_constraintBottom_toBottomOf="@id/lblReceivedEventsUrl"
            app:layout_constraintStart_toEndOf="@id/lblReceivedEventsUrl"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/contentPaddingHorizontalHalf"
            android:background="@drawable/bgd_item"
            tools:text="Some user"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
